--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.1",
+    "express-slow-down": "^2.1.0",
     "form-data": "^4.0.4",
     "gif-encoder-2": "^1.0.5",
     "gifencoder": "^2.0.1",
+    "helmet": "^7.2.0",
     "ioredis": "^5.3.2",
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
